Fix scan upload

--- a/app/src/main/res/layout/activity_detail_post.xml
+++ b/app/src/main/res/layout/activity_detail_post.xml
@@ -127,7 +127,7 @@
                 android:id="@+id/product_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="170dp"
                 android:fontFamily="@font/poppins_bold"
                 android:justificationMode="inter_word"
                 android:text="@string/product_title"
@@ -150,7 +150,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
-
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/detail_likes_fab"
@@ -180,16 +179,18 @@
     <View
         android:id="@+id/loadingView"
         android:layout_width="match_parent"
+        android:elevation="10dp"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:elevation="20dp"
         android:layout_gravity="center"
         android:indeterminate="true"
-        tools:visibility="gone" />
+        tools:visibility="visible" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
