--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -21,15 +21,15 @@
         android:id="@+id/appname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/gfs_didot"
-        android:text="@string/app_name2"
-        android:textStyle="bold"
         android:letterSpacing="0.1"
+        android:text="@string/app_name2"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.core.widget.NestedScrollView
@@ -37,9 +37,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/menuBtn"
-        app:layout_constraintTop_toBottomOf="@id/menuBtn"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/menuBtn">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
@@ -51,16 +51,16 @@
                 android:layout_height="60dp"
                 android:background="@drawable/ic_profile"
                 android:contentDescription="@string/btn_dashboard"
-                app:layout_constraintEnd_toEndOf="@id/divider"
                 app:layout_constraintBottom_toBottomOf="@id/usernameTv"
+                app:layout_constraintEnd_toEndOf="@id/divider"
                 app:layout_constraintTop_toTopOf="@id/helloTv" />
 
             <TextView
                 android:id="@+id/helloTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
                 android:fontFamily="@font/poppins_bold"
                 android:text="@string/drawer_hello"
                 android:textSize="25sp"
@@ -72,10 +72,13 @@
                 android:id="@+id/usernameTv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins"
                 android:layout_marginStart="10dp"
+                android:layout_marginEnd="20dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/poppins"
                 android:text="@string/username"
                 android:textSize="16sp"
+                app:layout_constraintEnd_toStartOf="@id/profileBtn"
                 app:layout_constraintStart_toStartOf="@id/divider"
                 app:layout_constraintTop_toBottomOf="@id/helloTv" />
 
@@ -95,8 +98,8 @@
                 android:textAlignment="textEnd"
                 android:textColor="@color/white"
                 android:textSize="15sp"
-                app:layout_constraintStart_toStartOf="@id/divider"
                 app:layout_constraintEnd_toStartOf="@id/catalogBtn"
+                app:layout_constraintStart_toStartOf="@id/divider"
                 app:layout_constraintTop_toBottomOf="@id/usernameTv"
                 tools:ignore="RtlCompat" />
 
@@ -104,17 +107,17 @@
                 android:id="@+id/catalogBtn"
                 android:layout_width="100dp"
                 android:layout_height="130dp"
+                android:layout_marginHorizontal="5dp"
                 android:background="@drawable/button_menu_general"
                 android:fontFamily="@font/poppins_bold"
                 android:gravity="bottom"
-                android:layout_marginHorizontal="5dp"
                 android:paddingBottom="10dp"
                 android:text="@string/dashboard_catalog"
                 android:textAlignment="textEnd"
                 android:textColor="@color/primaryBrown"
                 android:textSize="10sp"
-                app:layout_constraintStart_toEndOf="@id/scanBtn"
                 app:layout_constraintEnd_toStartOf="@id/likesBtn"
+                app:layout_constraintStart_toEndOf="@id/scanBtn"
                 app:layout_constraintTop_toTopOf="@id/scanBtn"
                 tools:ignore="RtlCompat,SmallSp" />
 
@@ -170,13 +173,13 @@
         android:backgroundTint="@color/primaryYellow"
         android:fontFamily="@font/poppins"
         android:text="@string/scroll_up_button"
-        tools:visibility="visible"
         android:visibility="invisible"
         app:icon="@drawable/ic_top"
         app:iconSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/nestedScrollView" />
+        app:layout_constraintTop_toTopOf="@+id/nestedScrollView"
+        tools:visibility="visible" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/dashboardFab"
@@ -184,8 +187,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="40dp"
         android:backgroundTint="@color/primaryYellow"
-        android:src="@drawable/ic_add_post"
         android:contentDescription="@string/btn_dashboard"
+        android:src="@drawable/ic_add_post"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
