--- a/app/src/main/res/layout/item_likes.xml
+++ b/app/src/main/res/layout/item_likes.xml
@@ -31,12 +31,16 @@
 
     <TextView
         android:id="@+id/usernameTv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:maxLines="1"
         android:layout_marginStart="20dp"
         android:text="@string/username"
         android:fontFamily="@font/poppins_bold"
         android:textSize="20sp"
+        android:ellipsize="end"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/imagePost"
         app:layout_constraintTop_toTopOf="@id/imagePost" />
 
