--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -5,5 +5,10 @@
         <item name="android:statusBarColor">@color/black</item>
         <item name="android:colorBackground">@color/white</item>
         <item name="colorAccent">@color/white</item>
+
+        <item name="colorPrimaryVariant">#326273</item>
+        <item name="colorOnPrimary">#FFFFFF</item>
+        <item name="colorSecondaryVariant">#E39774</item>
+        <item name="colorOnSecondary">#EEEEEE</item>
     </style>
 </resources>
