--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -33,29 +33,17 @@
         app:layout_constraintTop_toBottomOf="@id/backButton"
         tools:ignore="RtlSymmetry" />
 
-    <TextView
-        android:id="@+id/profileImage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/poppins"
-        android:paddingStart="20dp"
-        android:text="@string/profile_image"
-        android:textSize="25sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editTitle"
-        tools:ignore="RtlSymmetry" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/ic_profile_fill"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profileImage" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editTitle" />
 
     <TextView
         android:id="@+id/editImage"
@@ -64,25 +52,12 @@
         android:layout_marginStart="10dp"
         android:background="@drawable/button_menu_general"
         android:fontFamily="@font/poppins"
+        android:layout_marginTop="10dp"
         android:text="@string/profile_edit_image"
         android:textColor="@color/primaryBrown"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@id/imageView"
-        app:layout_constraintStart_toEndOf="@id/imageView"
-        app:layout_constraintTop_toTopOf="@id/imageView"
-        tools:ignore="RtlSymmetry" />
-
-    <TextView
-        android:id="@+id/profileUsername"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/poppins"
-        android:paddingStart="20dp"
-        android:text="@string/username2"
-        android:textSize="25sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/imageView"
+        app:layout_constraintEnd_toEndOf="@id/imageView"
         app:layout_constraintTop_toBottomOf="@id/imageView"
         tools:ignore="RtlSymmetry" />
 
@@ -91,21 +66,22 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/edit_text_grey_field"
         android:hint="@string/username"
         android:importantForAutofill="no"
         android:inputType="text"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profileUsername" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editImage" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/saveProfileBtn"
         android:layout_width="100dp"
         android:layout_height="60dp"
         android:layout_marginHorizontal="55dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/button_gradient"
         android:fontFamily="@font/poppins_bold"
         android:text="@string/save"
