--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -33,9 +33,9 @@
             android:fontFamily="@font/scheherazade"
             android:text="@string/profile_likes_sum"
             android:textSize="28sp"
+            android:layout_marginEnd="40dp"
             app:layout_constraintBottom_toBottomOf="@id/image_profile"
             app:layout_constraintEnd_toStartOf="@id/image_profile"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/image_profile" />
 
         <TextView
@@ -56,8 +56,8 @@
             android:fontFamily="@font/scheherazade"
             android:text="@string/profile_likes_sum"
             android:textSize="28sp"
+            android:layout_marginStart="40dp"
             app:layout_constraintBottom_toBottomOf="@id/image_profile"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/image_profile"
             app:layout_constraintTop_toTopOf="@id/image_profile" />
 
@@ -120,24 +120,25 @@
         <View
             android:id="@+id/view_divider_profile"
             android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/divider_profile"
+            android:layout_height="1dp"
+            android:background="@color/black"
+            android:layout_marginTop="20dp"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/button_edit_profile" />
+            app:layout_constraintTop_toBottomOf="@id/button_edit_profile"  />
 
         <TextView
             android:id="@+id/tv_label_postings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:fontFamily="@font/poppins_bold"
             android:padding="10dp"
             android:text="@string/profile_posts"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/view_divider_profile" />
+
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_grid"
