--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,204 +7,209 @@
     android:nestedScrollingEnabled="true"
     tools:context=".ui.profile.ProfileActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context=".ui.profile.ProfileActivity">
+        android:layout_height="match_parent">
 
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/backButton"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="14dp"
-            android:background="@drawable/ic_back"
-            android:contentDescription="@string/back_button_description"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="TouchTargetSizeCheck" />
-
-        <TextView
-            android:id="@+id/tv_likes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:fontFamily="@font/scheherazade"
-            android:text="@string/profile_likes_sum"
-            android:textSize="28sp"
-            android:layout_marginEnd="40dp"
-            app:layout_constraintBottom_toBottomOf="@id/image_profile"
-            app:layout_constraintEnd_toStartOf="@id/image_profile"
-            app:layout_constraintTop_toTopOf="@id/image_profile" />
-
-        <TextView
-            android:id="@+id/tv_label_likes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins"
-            android:text="@string/profile_likes"
-            app:layout_constraintEnd_toEndOf="@id/tv_likes"
-            app:layout_constraintStart_toStartOf="@id/tv_likes"
-            app:layout_constraintTop_toBottomOf="@id/tv_likes" />
-
-        <TextView
-            android:id="@+id/tv_posts"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="50dp"
-            android:fontFamily="@font/scheherazade"
-            android:text="@string/profile_likes_sum"
-            android:textSize="28sp"
-            android:layout_marginStart="40dp"
-            app:layout_constraintBottom_toBottomOf="@id/image_profile"
-            app:layout_constraintStart_toEndOf="@id/image_profile"
-            app:layout_constraintTop_toTopOf="@id/image_profile" />
-
-        <TextView
-            android:id="@+id/tv_label_post"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins"
-            android:text="@string/profile_posts"
-            app:layout_constraintEnd_toEndOf="@id/tv_posts"
-            app:layout_constraintStart_toStartOf="@id/tv_posts"
-            app:layout_constraintTop_toBottomOf="@+id/tv_posts" />
-
-        <TextView
-            android:id="@+id/username_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/poppins_bold"
-            android:text="@string/username"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="@id/image_profile"
-            app:layout_constraintStart_toStartOf="@id/image_profile"
-            app:layout_constraintTop_toBottomOf="@id/image_profile" />
-
-        <TextView
-            android:id="@+id/email_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins"
-            android:text="@string/email"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="@id/username_profile"
-            app:layout_constraintStart_toStartOf="@id/username_profile"
-            app:layout_constraintTop_toBottomOf="@id/username_profile" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/button_edit_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/button_gradient"
-            android:text="@string/profile_edit"
-            android:textColor="@color/white"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="@id/email_profile"
-            app:layout_constraintStart_toStartOf="@id/email_profile"
-            app:layout_constraintTop_toBottomOf="@id/email_profile"
-            tools:visibility="visible" />
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/image_profile"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginTop="76dp"
-            android:src="@drawable/ic_profile"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <View
-            android:id="@+id/view_divider_profile"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/main"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/black"
-            android:layout_marginTop="20dp"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/button_edit_profile"  />
-
-        <TextView
-            android:id="@+id/tv_label_postings"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_bold"
-            android:padding="10dp"
-            android:text="@string/profile_posts"
-            android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/view_divider_profile" />
+            tools:context=".ui.profile.ProfileActivity">
 
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button_grid"
-            style="?attr/materialIconButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/grid_description"
-            app:icon="@drawable/ic_grid"
-            app:layout_constraintEnd_toStartOf="@+id/button_list"
-            app:layout_constraintTop_toTopOf="@id/tv_label_postings" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/backButton"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginStart="14dp"
+                android:layout_marginTop="14dp"
+                android:background="@drawable/ic_back"
+                android:contentDescription="@string/back_button_description"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="TouchTargetSizeCheck" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button_list"
-            style="?attr/materialIconButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/list_description"
-            app:icon="@drawable/ic_list"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tv_label_postings" />
+            <TextView
+                android:id="@+id/tv_likes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="40dp"
+                android:fontFamily="@font/scheherazade"
+                android:text="@string/profile_likes_sum"
+                android:textSize="28sp"
+                app:layout_constraintBottom_toBottomOf="@id/image_profile"
+                app:layout_constraintEnd_toStartOf="@id/image_profile"
+                app:layout_constraintTop_toTopOf="@id/image_profile" />
 
-        <View
-            android:id="@+id/divider_postings"
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:background="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/button_grid" />
+            <TextView
+                android:id="@+id/tv_label_likes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins"
+                android:text="@string/profile_likes"
+                app:layout_constraintEnd_toEndOf="@id/tv_likes"
+                app:layout_constraintStart_toStartOf="@id/tv_likes"
+                app:layout_constraintTop_toBottomOf="@id/tv_likes" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rc_post_profile"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="10dp"
-            android:contentDescription="@string/rv_post_description"
-            android:isScrollContainer="false"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:layout_constraintTop_toBottomOf="@id/divider_postings"
-            app:spanCount="2"
-            tools:itemCount="20"
-            tools:listitem="@layout/item_post_profile_grid" />
+            <TextView
+                android:id="@+id/tv_posts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="50dp"
+                android:fontFamily="@font/scheherazade"
+                android:text="@string/profile_likes_sum"
+                android:textSize="28sp"
+                app:layout_constraintBottom_toBottomOf="@id/image_profile"
+                app:layout_constraintStart_toEndOf="@id/image_profile"
+                app:layout_constraintTop_toTopOf="@id/image_profile" />
 
-        <TextView
-            android:id="@+id/noPostTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:text="@string/no_posts"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/divider_postings" />
+            <TextView
+                android:id="@+id/tv_label_post"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins"
+                android:text="@string/profile_posts"
+                app:layout_constraintEnd_toEndOf="@id/tv_posts"
+                app:layout_constraintStart_toStartOf="@id/tv_posts"
+                app:layout_constraintTop_toBottomOf="@+id/tv_posts" />
 
-        <com.google.android.material.progressindicator.CircularProgressIndicator
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:indeterminate="true"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:visibility="visible" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+            <TextView
+                android:id="@+id/username_profile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/poppins_bold"
+                android:text="@string/username"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="@id/image_profile"
+                app:layout_constraintStart_toStartOf="@id/image_profile"
+                app:layout_constraintTop_toBottomOf="@id/image_profile" />
+
+            <TextView
+                android:id="@+id/email_profile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins"
+                android:text="@string/email"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="@id/username_profile"
+                app:layout_constraintStart_toStartOf="@id/username_profile"
+                app:layout_constraintTop_toBottomOf="@id/username_profile" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button_edit_profile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_gradient"
+                android:text="@string/profile_edit"
+                android:textColor="@color/white"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="@id/email_profile"
+                app:layout_constraintStart_toStartOf="@id/email_profile"
+                app:layout_constraintTop_toBottomOf="@id/email_profile"
+                tools:visibility="visible" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/image_profile"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_marginTop="76dp"
+                android:src="@drawable/ic_profile"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <View
+                android:id="@+id/view_divider_profile"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="20dp"
+                android:background="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/button_edit_profile" />
+
+            <TextView
+                android:id="@+id/tv_label_postings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_bold"
+                android:padding="10dp"
+                android:text="@string/profile_posts"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/view_divider_profile" />
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_grid"
+                style="?attr/materialIconButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/grid_description"
+                app:icon="@drawable/ic_grid"
+                app:layout_constraintEnd_toStartOf="@+id/button_list"
+                app:layout_constraintTop_toTopOf="@id/tv_label_postings" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_list"
+                style="?attr/materialIconButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/list_description"
+                app:icon="@drawable/ic_list"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/tv_label_postings" />
+
+            <View
+                android:id="@+id/divider_postings"
+                android:layout_width="wrap_content"
+                android:layout_height="1dp"
+                android:background="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/button_grid" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rc_post_profile"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_margin="10dp"
+                android:contentDescription="@string/rv_post_description"
+                android:isScrollContainer="false"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:layout_constraintTop_toBottomOf="@id/divider_postings"
+                app:spanCount="2"
+                tools:itemCount="20"
+                tools:listitem="@layout/item_post_profile_grid" />
+
+            <TextView
+                android:id="@+id/noPostTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="100dp"
+                android:text="@string/no_posts"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/divider_postings" />
+
+            <com.google.android.material.progressindicator.CircularProgressIndicator
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="visible" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
