--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -19,16 +19,29 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
 
+    <TextView
+        android:id="@+id/scanTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="@string/upload_your_batik"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="@id/imageFieldCard"
+        app:layout_constraintStart_toStartOf="@id/imageFieldCard"
+        app:layout_constraintTop_toBottomOf="@id/backButton"
+        tools:ignore="RtlSymmetry" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/imageFieldCard"
         android:layout_width="250dp"
         android:layout_height="350dp"
         android:layout_marginTop="60dp"
+        app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toTopOf="@id/descriptionEdit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/backButton"
-        app:cardCornerRadius="10dp">
+        app:layout_constraintTop_toBottomOf="@id/backButton">
 
         <ImageView
             android:id="@+id/imageField"
@@ -121,6 +134,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
+
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/progressBarScan"
         android:layout_width="wrap_content"
