--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/uploadContainer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent">
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".ui.upload.UploadActivity">
 
     <androidx.appcompat.widget.AppCompatButton
@@ -36,12 +40,11 @@
         android:id="@+id/imageFieldCard"
         android:layout_width="250dp"
         android:layout_height="350dp"
-        android:layout_marginTop="60dp"
         app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toTopOf="@id/descriptionEdit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/backButton">
+        app:layout_constraintTop_toBottomOf="@id/scanTitle">
 
         <ImageView
             android:id="@+id/imageField"
@@ -147,3 +150,5 @@
         app:layout_constraintTop_toBottomOf="@id/batik_tag"
         tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
